1：重构mongo文件管理